...
    
    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        "Create Pin",
                        color = Color.White,
                        fontWeight = FontWeight.Bold
                    )
                },
                navigationIcon = {
                    IconButton(onClick = onNavigateBack) {
...
